--- a/sass/layout/_portfolio-galery.scss
+++ b/sass/layout/_portfolio-galery.scss
@@ -1,12 +1,83 @@
-.page-header__portfolio {
+.page-header {
     border-bottom: 1px solid #ececec;
 }
-
-/*.page-header .container {
-    display: flex;
-}*/
-
 .galery-list {
+    display: flex;
+    
+    
+}
+.galery-list-button {
+    min-width: 73px;
+    padding: 6px 22px;
+    border-radius: 4px;
+    font-family: Roboto, sans-serif;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.62;
+    text-align: center;
+    letter-spacing: 0.03em;
+    background-color: #f5f4fa;
+    color: var(--title-text-color);
+    border: 0;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    &:hover,
+    &:focus {
+        background-color: var(--accent-color);
+        color: #ffffff;
+        cursor: pointer;
+        box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+            0px 2px 2px rgba(0, 0, 0, 0.12);
+    }
+}
+.galery-link {
+    display: block;
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    &:hover,
+    &:focus {
+        box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+            1px 4px 6px rgba(0, 0, 0, 0.16);
+    }
+}
+//0px-767px
+@media screen and (max-width:768px) {
+    .galery-list{
+        flex-wrap: wrap;
+      justify-content: flex-start;
+      margin-bottom: 40px;
+      
+    }
+    .galery-list-item{
+        margin-right: 8px;
+        &:not(:nth-last-child(-n + 3)) {
+            margin-bottom: 15px;
+        }
+        
+    }
+
+}
+
+
+//768+
+@media screen and (min-width: 768px) {
+    .galery-list {
+        flex-wrap:nowrap;
+        justify-content: center;
+        margin-bottom: 30px;
+    }
+    .galery-list-item:not(:last-child) {
+        margin-right: 8px;
+    }
+}
+
+//1200+
+@media screen and (min-width: 1200px){}
+
+
+/*.galery-list {
     display: flex;
     justify-content: center;
     margin-bottom: 50px;
@@ -124,5 +195,5 @@
     .galery-link:focus & {
         transform: translateY(0%);
     }
-}
+}*/
 
