--- a/css/main.css
+++ b/css/main.css
@@ -448,6 +448,7 @@ img {
     position: relative;
     padding-top: 48px;
     padding-bottom: 48px;
+    padding-left: 40px;
   }
   .mobile-menu-btn {
     background-color: transparent;
