--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -73,6 +73,7 @@
         position: relative;
         padding-top: 48px;
         padding-bottom: 48px;
+        padding-left: 40px;
     
     }
     .mobile-menu-btn {
